--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <header>
-        <nav class="nav-extended">
+        <nav class="nav-extended green accent-3">
             <div class="nav-wrapper">
-                <a href="">Meade Procurement App</a>
+                <a href="" class="brand-logo left">
+                    <img src="{{ url_for('static', filename='images/meade_farm_logo.png') }}" alt="Meade Farm Logo" class="responsive-img">
+                </a>
                 <a href="#" data-target="mobile-sidenav" class="sidenav-trigger right">
                     <i class="material-icons">menu</i>
                 </a>
