--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600&display=swap');
+
 .nav-extended .nav-wrapper .brand-logo {
     bottom: 0;
     top: 0;
