--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         {% with messages = get_flashed_messages() %}
             {% if messages %} 
                 {% for message in messages %} 
-                    <div class="row flashes">
+                    <div class="row flashes light-green-text text-accent-4">
                         <h4 class="center-align">{{ message }}</h4>
                     </div>
                 {% endfor %}
