fix: adjust maxlength and pattern attributes on email field

--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">email</i>
-                    <input type="email" id="email" name="email" class="validate" minlength="2" maxlength="15" pattern="^[a-zA-Z0-9]{2,15}$" required>
+                    <input type="email" id="email" name="email" class="validate" minlength="2" maxlength="40" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" required>
                     <label for="email">Email Address</label>
                 </div>
                 <div class="input-field col s12 m6">
