fix: remove pattern attribute from password fields

--- a/templates/register.html
+++ b/templates/register.html
@@ -28,12 +28,12 @@
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">lock</i>
-                    <input type="password" id="password" name="password" class="validate" pattern="^[a-zA-Z0-9]{5,15}$" minlength="5" maxlength="15" required>
+                    <input type="password" id="password" name="password" class="validate" minlength="5" maxlength="15" required>
                     <label for="password">Password</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">lock_outline</i>
-                    <input type="password" id="password_repeat" name="password_repeat" class="validate" pattern="^[a-zA-Z0-9]{5,15}$" minlength="5" maxlength="15" required>
+                    <input type="password" id="password_repeat" name="password_repeat" class="validate" minlength="5" maxlength="15" required>
                     <label for="password_repeat">Repeat Password</label>
                 </div>
                 <div class="input-field col s12 m6">
