feat: add department label for selector

--- a/templates/register.html
+++ b/templates/register.html
@@ -44,6 +44,7 @@
                             <option value="{{ department.department_name }}">{{ department.department_name }}</option>
                         {% endfor %}
                     </select>
+                    <label for="department">Department</label>
                 </div>
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">people</i>
