feat: change value of option elements in customers select to the _id of the customer

--- a/templates/customer_select.html
+++ b/templates/customer_select.html
@@ -10,7 +10,7 @@
                     <i class="material-icons prefix">domain</i>
                     <select name="customer" id="customer">
                         {% for customer in customers %} 
-                            <option value="{{ customer.customer_name }}">{{ customer.customer_name }}</option>
+                            <option value="{{ customer._id }}">{{ customer.customer_name }}</option>
                         {% endfor %}
                     </select>
                     <label for="customer">Customer</label>
