--- a/templates/customer_select.html
+++ b/templates/customer_select.html
@@ -16,6 +16,11 @@
                     <label for="customer">Customer</label>
                 </div>
             </div>
+            <div class="row col s12 center-align">
+                <button type="submit" class="btn-large green accent-3 center-align">
+                    <i class="material-icons right">check</i> Submit
+                </button>
+            </div>
         </div>
     </form>
 {% endblock %}
