--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -16,3 +16,40 @@
                 </div>
             </div><hr><br>
             <div class="row">
+
+                {% for field in field_list.commercial_details %}
+
+                    {% if field.field_type == "input" %} 
+
+                        <div class="input-field col s12 m6">
+                            <input type="{{ field.input_type }}" class="validate" name="{{ field.field_name }}" id="{{ field.field_name }}" required>
+                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+                        </div>
+
+                    {% elif field.field_type == "date" %}
+
+                        <div class="input-field col s12 m6">
+                            <input type="text" class="datepicker validate" name="{{ field.field_name }}" id="{{ field.field_name }}" required>
+                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+                        </div>
+
+                    {% elif field.field_type == "multiselect" %}
+
+                        <div class="input-field col s12 m6">
+                            <select multiple name="{{ field.field_name }}[]" id="{{ field.field_name }}" required>
+                                {% for option in field.options %} 
+                                    <option value="{{ option.name }}">{{ option.name }}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="{{ field.field_name }}">{{ field.field_name.replace("_", " ").title() }}</label>
+                        </div>
+
+                    {% endif %}
+
+                {% endfor %}
+
+            </div>
+            
+        </div>
+    </form>
+{% endblock %}
