--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -3,7 +3,7 @@
 
     <h3 class="center-align">Create Product <i class="material-icons">control_point</i></h3>
 
-    <form action="#" method="post">
+    <form action="{{ url_for('product_details', customer_id=customer_id) }}" method="post">
         <div class="card-panel">
             <div class="row">
                 <div class="input-field col s12 m6">
