fix: change customer name variable to field list customer name

--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -7,7 +7,7 @@
         <div class="card-panel">
             <div class="row">
                 <div class="input-field col s12 m6">
-                    <input type="text" class="validate" name="customer" id="customer" value="{{ customer_name }}" disabled>
+                    <input type="text" class="validate" name="customer" id="customer" value="{{ field_list.customer }}" disabled>
                     <label for="customer">Customer</label>
                 </div>
                 <div class="input-field col s12 m6">
