--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -36,7 +36,7 @@
                     {% elif field.field_type == "multiselect" %}
 
                         <div class="input-field col s12 m6">
-                            <select multiple name="{{ field.field_name }}[]" id="{{ field.field_name }}" required>
+                            <select multiple name="{{ field.field_name }}" id="{{ field.field_name }}" required>
                                 {% for option in field.options %} 
                                     <option value="{{ option.name }}">{{ option.name }}</option>
                                 {% endfor %}
