--- a/templates/commercial_product_details.html
+++ b/templates/commercial_product_details.html
@@ -49,7 +49,13 @@
                 {% endfor %}
 
             </div>
-            
+            <div class="row">
+                <div class="col s12 center-align">
+                    <button type="submit" class="btn-large green accent-3 center-align">
+                        <i class="material-icons right">check</i> Submit
+                    </button>
+                </div>
+            </div>
         </div>
     </form>
 {% endblock %}
