fix: comment out product details class style rule

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,10 +14,10 @@
         height: 55px;
     }
 }
-
+/* 
 #product-details {
     line-height: 40px;
-}
+} */
 
 .flashes h4 {
     font-family: 'Nunito Sans';
