fix: add url_for link to add_product_details view for add details button on home screen

--- a/templates/upcoming_products.html
+++ b/templates/upcoming_products.html
@@ -121,7 +121,7 @@
                                 </a>
                             </td>
                             <td>
-                                <a href="#" class="btn waves-effect blue accent-3">
+                                <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn waves-effect blue accent-3">
                                     <i class="material-icons right">edit</i> Add Details
                                 </a>
                             </td>
