--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -11,7 +11,7 @@
 
             {% for field, value in product.items() %}
 
-                {% if field != "_id" %} 
+                {% if field != "_id" and value is not mapping %} 
                     <div class="col s12 m6 row">
                         <div class="col s4">
                             <strong>{{ field.replace("_", " ").title() }}</strong>
@@ -20,7 +20,7 @@
                             <!-- check if value is list or string -->
                             {% if value is iterable and (value is not string and value is not mapping) %}
                                 {{ ", ".join(value) }}
-                            {% else %} 
+                            {% else %}  
                                 {{ value }}
                             {% endif %} 
                         </div>
