--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -71,5 +71,18 @@
         <hr>
 
     {% endfor %}
+    
+    <br>
+
+    <div class="row">
+        <div class="col s12 center-align">
+            <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn-large green accent-3 center-align">
+                <i class="material-icons right">edit</i> Edit Details
+            </a>
+            <a href="#" class="btn-large blue accent-3 center-align">
+                <i class="material-icons right">local_printshop</i> PDF Form
+            </a>
+        </div>
+    </div>
 
 {% endblock %}
