--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -11,7 +11,7 @@
 
             {% for field, value in product.items() %}
 
-                {% if field != "_id" %} 
+                {% if field != "_id" and value is not mapping %} 
                     <div class="col s12 m6 row">
                         <div class="col s4">
                             <strong>{{ field.replace("_", " ").title() }}</strong>
