fix: add check to see if value is list, if it is join values to create string

--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -52,7 +52,11 @@
                                 <strong>{{ field.replace("_", " ").title() }}</strong>
                             </div>
                             <div class="col s8">
-                                {{ value }}
+                                {% if value is iterable and (value is not string and value is not mapping) %}
+                                    {{ ", ".join(value) }}
+                                {% else %}  
+                                    {{ value }}
+                                {% endif %} 
                             </div>
                         </div>
 
