feat: add comments to my_tasks.html

--- a/templates/my_tasks.html
+++ b/templates/my_tasks.html
@@ -8,6 +8,7 @@
     <hr>
 
     <table class="highlight responsive-table">
+        {# Table built very much like table in upcoming products view #}
         <thead>
 
             {% if products %}
