--- a/templates/register.html
+++ b/templates/register.html
@@ -5,37 +5,44 @@
 
     <form action="{{ url_for('register') }}" method="POST">
         <div class="card-panel">
+            {# First Name Input #}
             <div class="row">
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person</i>
                     <input type="text" id="f_name" name="f_name" class="validate" minlength="2" maxlength="15" pattern="^[a-zA-Z0-9]{2,15}$" required>
                     <label for="f_name">First Name</label>
                 </div>
+                {# Last Name Input #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">person_outline</i>
                     <input type="text" id="l_name" name="l_name" class="validate" minlength="2" maxlength="15" pattern="^[a-zA-Z0-9]{2,15}$" required>
                     <label for="l_name">Last Name</label>
                 </div>
+                {# Username Input #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">fingerprint</i>
                     <input type="text" id="username" name="username" class="validate" minlength="2" maxlength="20" pattern="^[a-zA-Z0-9]{2,15}$" required>
                     <label for="username">Username</label>
                 </div>
+                {# Email Input #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">email</i>
                     <input type="email" id="email" name="email" class="validate" minlength="2" maxlength="40" pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" required>
                     <label for="email">Email Address</label>
                 </div>
+                {# Password Input #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">lock</i>
                     <input type="password" id="password" name="password" class="validate" minlength="5" maxlength="15" required>
                     <label for="password">Password</label>
                 </div>
+                {# Repeat Password Input #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">lock_outline</i>
                     <input type="password" id="password_repeat" name="password_repeat" class="validate" minlength="5" maxlength="15" required>
                     <label for="password_repeat">Repeat Password</label>
                 </div>
+                {# Department Select #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">label</i>
                     <select id="department" name="department" class="validate" required>
@@ -46,6 +53,7 @@
                     </select>
                     <label for="department">Department</label>
                 </div>
+                {# Role Select #}
                 <div class="input-field col s12 m6">
                     <i class="material-icons prefix">people</i>
                     <select id="role" name="role" class="validate" required>
@@ -56,6 +64,7 @@
                     </select>
                     <label for="role">Role</label>
                 </div>
+                {# Meade (secret) Passcode Input To Authorize Registration #}
                 <div class="input-field col s12 offset-m3 m6">
                     <i class="material-icons prefix">security</i>
                     <input type="password" name="meade_password" id="meade_password" class="validate" required>
