--- a/templates/upcoming_products.html
+++ b/templates/upcoming_products.html
@@ -11,11 +11,11 @@
             {% if products %}
                     
                 <tr>
-
+                    {# cycle through the first item in the products dictionary to build table header #}
                     {% for field, value in products[0].items() %}
 
                         {% if field != "_id" %}
-
+                            {# transform the field name from db field name to coherent display name #}
                             <th>{{ field.replace("_", " ").title() }}</th>
 
                         {% endif %}
@@ -32,15 +32,15 @@
         <tbody>
 
             {% if products %}
-
+                {# cycle through all products in products list #}
                 {% for product in products %}
-
+                    {# In the first table we only want to see products that have the status "Complete - Production Ready" #}
                     {% if product.status == "Complete - Production Ready" %}
                     
                         <tr>
-
+                            {# iterate over the dict object of each project, get the field, value from each #}
                             {% for field, value in product.items() %}
-
+                                {# we don't want the "_id" value displaying #}
                                 {% if field != "_id" %}
 
                                     <td>{{ value }}</td>
@@ -48,7 +48,7 @@
                                 {% endif %}
 
                             {% endfor %}
-
+                            {# at the end of each product row we create a link that will direct the user to the view_product view for the product #}
                             <td>
                                 <a href="{{ url_for('view_product', product_id=product._id) }}" class="btn waves-effect green accent-3">
                                     <i class="material-icons right">format_list_bulleted</i> View Product
@@ -120,6 +120,7 @@
                                     <i class="material-icons right">format_list_bulleted</i> View Product
                                 </a>
                             </td>
+                            {# for the products that are not yet complete we also add the option to be able to add/edit the details of the product #}
                             <td>
                                 <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn waves-effect blue accent-3">
                                     <i class="material-icons right">edit</i> Add Details
