feat: add delete product link to product detail view

--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -79,6 +79,11 @@
     {# Provide options to edit details and print pdf version of form at bottom of view #}
     <div class="row">
         <div class="col s12 center-align">
+            {% if session.role == "Commercial" and session.department == product.department %}
+                <a href="{{ url_for('delete_product', product_id=product._id) }}" class="btn-large red accent-3 center-align">
+                    <i class="material-icons right">cancel</i> Delete Product
+                </a>
+            {% endif %}
             <a href="{{ url_for('add_product_details', product_id=product._id) }}" class="btn-large green accent-3 center-align">
                 <i class="material-icons right">edit</i> Edit Details
             </a>
