--- a/templates/add_product_details.html
+++ b/templates/add_product_details.html
@@ -7,30 +7,49 @@
 
     {% if product %} 
 
-        <div class="row" id="product-details">
+        {% if session.role != "Commercial" and session.role != "Admin" %}
 
-            {% for field, value in product.items() %}
+            <div class="row" id="product-details">
 
-                {% if field != "_id" and value is not mapping %} 
-                    <div class="col s12 m6 row">
-                        <div class="col s4">
-                            <strong>{{ field.replace("_", " ").title() }}</strong>
+                {% for field, value in product.items() %}
+
+                    {% if field != "_id" and value is not mapping %} 
+                        <div class="col s12 m6 row">
+                            <div class="col s4">
+                                <strong>{{ field.replace("_", " ").title() }}</strong>
+                            </div>
+                            <div class="col s8">
+                                <!-- check if value is list or string -->
+                                {% if value is iterable and (value is not string and value is not mapping) %}
+                                    {{ ", ".join(value) }}
+                                {% else %} 
+                                    {{ value }}
+                                {% endif %} 
+                            </div>
                         </div>
-                        <div class="col s8">
-                            <!-- check if value is list or string -->
-                            {% if value is iterable and (value is not string and value is not mapping) %}
-                                {{ ", ".join(value) }}
+                    {% endif %}
+
+                {% endfor %}
+
+            </div>
+        
+        {% else %}
                             {% else %} 
-                                {{ value }}
+        {% else %}
+                                {% else %} 
+                                    {{ value }}
+                                {% endif %} 
                             {% endif %} 
+                                {% endif %} 
+                            </div>
                         </div>
-                    </div>
-                {% endif %}
+                    {% endif %}
 
-            {% endfor %}
+                {% endfor %}
 
-        </div>
-
+            </div>
+        
+        {% else %}
     {% endif %}
 
     <hr>
